@@ -1,3 +1,7 @@
+2019-12-18  Dirk Eddelbuettel  <edd@debian.org>
+
+	* src/tools/RInsideEnvVars.r: Quote environment variable values
+
 2019-03-06  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): Release 0.2.15
